fix css issues on mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,9 +6,12 @@
     --hover-color:#0dcaf0;
 }
 .home{
-    height: 100vh;
+    min-height: 100vh;
     background-color: var(--main-color);
 
+}
+.max-w-75 {
+    max-width: 75%;
 }
 .logo h1{
     font-size: 16px;
